--- a/src/index.css
+++ b/src/index.css
@@ -64,12 +64,12 @@ body:has(.card[data-color="green"]:hover) {
 
     .info-box {
         /* @apply mx-5 relative flex text-white flex-col gap-3 max-w-2xl neo-brutalism-blue pt-4 pb-12 px-8; */
-        @apply mx-5 relative flex text-white flex-col gap-3 max-w-2xl neo-brutalism-blue pt-4 pb-12 px-8;
+        @apply mx-5 relative flex text-white flex-col gap-3 max-w-2xl neo-brutalism-blue pt-4 pb-12 px-8 opacity-100;
     }
 
     .neo-btn {
         /* @apply py-3 px-6 rounded-lg text-blue-500 text-center font-semibold sm:w-1/2 w-[90%] -bottom-5 absolute mx-auto right-0 left-0 flex justify-center items-center gap-3; */
-        @apply py-3 px-6 rounded-lg text-blue-500 text-center font-semibold sm:w-1/2 w-[90%] -bottom-5 absolute mx-auto right-0 left-0 flex justify-center items-center gap-3;
+        @apply py-3 px-1 rounded-lg text-blue-500 text-center font-semibold sm:w-1/2 w-[90%] -bottom-5 absolute mx-auto right-0 left-0 flex justify-center items-center gap-3;
     }
 
     .cta {
@@ -129,7 +129,7 @@ body:has(.card[data-color="green"]:hover) {
 }
 
 .block-container .btn-back-blue {
-    background: linear-gradient(135deg, #0061ff -20%, #60efff 120%);
+    background: linear-gradient(135deg, #0061ff -100%, #60efff 120%);
 }
 
 .block-container .btn-back-orange {
@@ -169,12 +169,15 @@ body:has(.card[data-color="green"]:hover) {
 
 /* Neo Brutalism */
 .neo-brutalism-blue {
+    /* background: rgba(43, 119, 231, 0.8); */
     background: #2b77e7;
     position: relative;
     border-radius: 10px;
     border: #2b77e7;
     box-shadow: 0.6vmin 0.6vmin #336cc1, 1vmin 1vmin #0092db, 1vmin 1vmin #0092db,
         0.65vmin 1vmin #0092db, 1vmin 0.65vmin #0092db;
+    /* background-blend-mode: burn; */
+    /* opacity: .8; */
 }
 
 .neo-brutalism-white {
@@ -182,4 +185,5 @@ body:has(.card[data-color="green"]:hover) {
     border: #fff;
     box-shadow: 0.6vmin 0.6vmin #fff, 1vmin 1vmin #d2e4ff, 1vmin 1vmin #d2e4ff,
         0.65vmin 1vmin #d2e4ff, 1vmin 0.65vmin #d2e4ff;
+    /* opacity: 1; */
 }
